reduce slides